zeroidc/vendor/wasm-bindgen-macro/ui-tests/pub-not-copy.stderr
error[E0277]: the trait bound `String: std::marker::Copy` is not satisfied
 --> $DIR/pub-not-copy.rs:5:16
  |
5 |     pub field: String,
  |                ^^^^^^ the trait `std::marker::Copy` is not implemented for `String`
  |
note: required by a bound in `assert_copy`
 --> $DIR/pub-not-copy.rs:3:1
  |
3 | #[wasm_bindgen]
  | ^^^^^^^^^^^^^^^ required by this bound in `assert_copy`
  = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
